src/tests/snapshots/gitu__tests__merge__merge_menu.snap
---
source: src/tests/merge.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Merge                Arguments                                                 |
 m       merge        -f Fast-forward only (--ff-only)                          |
 a       abort        -n No fast-forward (--no-ff)                              |
 c       continue                                                               |
 q/<esc> Quit/Close                                                             |
styles_hash: a71c84f554de9671
